shared-business-logics/services/ai-services/Backend/Java/security-fraud-prevention/anomaly-detection-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anomaly-detection-service
  namespace: ai-services
  labels:
    app: anomaly-detection-service
    team: team-f-ai-services
spec:
  type: ClusterIP
  selector:
    app: anomaly-detection-service
  ports:
  - name: http
    port: 8264
    targetPort: 8264
    protocol: TCP
